Improve transaction corrections and asset selection
